a1/brendan_gordon/TEST_PROGRAMS/invalidtype/theo_szymkowiak/prgm3.min
# Cannot divide or multiple two strings
var st1: string;
var st2: string;
var r: string;

st1 = "string1";
st2 = "string2";

r = st1 * st2;

